<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".details.DetailsAnimeActivity">

        <TextView
            android:id="@+id/tvOriginalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Original Name" />

        <TextView
            android:id="@+id/tvEnglishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:textColor="@color/anime_english_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOriginalName"
            tools:text="English Name" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llAnimeHeader"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEnglishName">

            <ImageView
                android:id="@+id/ivAnimeImage"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="8dp">

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:textSize="16sp"
                    tools:text="@string/anime_details_type" />

                <TextView
                    android:id="@+id/tvEpisodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:textSize="16sp"
                    tools:text="@string/anime_details_episodes" />

                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:textSize="16sp"
                    tools:text="@string/anime_details_score" />

                <TextView
                    android:id="@+id/tvRank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:textSize="16sp"
                    tools:text="@string/anime_details_rank" />

                <TextView
                    android:id="@+id/tvPopularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:textSize="16sp"
                    tools:text="@string/anime_details_popularity" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:textSize="16sp"
                    tools:text="@string/anime_details_status" />

                <TextView
                    android:id="@+id/tvGenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="4dp"
                    android:textSize="16sp"
                    tools:text="@string/anime_details_genres" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/titleSynopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llAnimeHeader"
            tools:text="@string/anime_details_synopsis" />

        <TextView
            android:id="@+id/tvSynopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleSynopsis" />

        <TextView
            android:id="@+id/titleCharacters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSynopsis"
            tools:text="Characters" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCharacters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleCharacters" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>